# emva1288

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST  MANIFEST.in  README.md  README.rst  old_setup.cfg  old_setup.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tests.py  versioneer.py
.circleci/: config.yml
.circleci/test_doc_examples/: ci_test_sample_report.py
doc/: Makefile  conf.py  datasets.rst  datasets_image.rst  datasets_results.rst  index.rst  installation.rst  make.bat  tutorial.rst
doc/_templates/: layout.html
doc/datasets/: datasets_image.rst  datasets_results.rst  index.rst
doc/doc_api/: camera.rst  emva1288.rst  process.rst  report.rst  sphinx_directives.rst  unittests.rst
doc/examples/: EMVA1288_image_data.txt  extend_plots.py  full_emva_process.py  grab.py  index.rst  sample_report.py
doc/exts/: sphinx_directives.py
doc/obj_inv/: jinja2.inv  matplotlib.inv  python3_5.inv
emva1288/: __init__.py  _version.py  data.py  loader.py  parser.py  plotting.py  results.py  routines.py  template.py
emva1288/camera/: bad_images.py  camera.py  dataset_generator.py  points_generator.py  routines.py
emva1288/examples/: EMVA1288_Descriptor_File.txt  full_emva_process.py
emva1288/process/: __init__.py  data.py  loader.py  parser.py  plotting.py  results.py  routines.py
emva1288/report/: __init__.py  report.py
emva1288/report/templates/: emvadatasheet.sty  general_info.tex  op.tex  op_header.tex  report.tex
emva1288/tests/: test_camera_pytest.py
emva1288/tests/utils/: logger.py
emva1288/unittests/: test_camera.py  test_coding_standards.py  test_data.py  test_loader.py  test_parser.py  test_results.py  test_routines.py
examples/: emva_xml_compare.py  emva_xml_create.py  full_emva_process.py  grab.py  grab_and_process.py  sample_report.py  simple_emva_process.py
examples/ipython/: process.ipynb
src/emva1288/camera/: routines.py
src/emva1288/process/: __init__.py  routines.py
src/emva1288/report/templates/: general_info.tex  report.tex
tests/: conftest.py  test_camera.py  test_data.py  test_loader.py  test_parser.py  test_report.py  test_results.py  test_routines.py
tests/unittests/: test_data.py  test_parser.py  test_report.py  test_results.py
tests/utils/: logger.py
