[project]
name = "emva1288"
authors = [
  {email = "ariza.federico@gmail.com", name = "Federico Ariza"},
]
description='EMVA1288 reference implementation'
readme = "README.rst"
dynamic = ["version"]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["matplotlib", "numpy", "pillow", "lxml", "scipy", "jinja2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics"
]

[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "build<0.10.0"
    ]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
tests = ["pytest", "pytest-flake8"]
doc =  ["sphinx", "sphinx_rtd_theme"]

[tool.setuptools_scm]
version_file = "src/emva1288/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
fallback_version = "0.0+UNKNOWN"

[project.urls]
Repository = "https://github.com/EMVA1288/emva1288"
Documentation = "http://emva1288.readthedocs.io/en/latest/"
Homepage = "http://www.emva.org/standards-technology/emva-1288/"
