[metadata]
name = emva1288
version = attr: emva1288/_version.py
description = EMVA1288 reference implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = sensors, cameras, industrial, standard
license =  GNU General Public License v3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
author = Federico Ariza
author_email = ariza.federico@gmail.com
url = https://github.com/EMVA1288/emva1288

[options]
install_requires =  matplotlib
                    numpy
                    pillow
                    lxml
                    scipy
                    jinja2
packages = emva1288, emva1288.report, emva1288.camera, emva1288.process

[options.package_data]
emva1288 = report/files/*, report/templates/*

[options.extras_require]
tests = pytest
        pytest-flake8

[flake8]
max-line-length = 100